--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <head>
 </head>
 <body>
-    <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="jBX9JEBr"></script>
 <h1>Save Cheat Lake!</h1>
-<div>Advocating for Cheat Lake, WV</div>
-<div class="fb-page" data-href="https://www.facebook.com/savecheatlake" data-tabs="timeline, events, messages" data-width="500" data-height="800" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/savecheatlake" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/savecheatlake">SAVE CHEAT LAKE</a></blockquote></div>
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fsavecheatlake&tabs=timeline%2C%20events%2C%20messages&width=500&height=800&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="800" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 </body>
 </html>
