--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 <h1>Save Cheat Lake!</h1>
 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fsavecheatlake&tabs=timeline%2C%20events%2C%20messages&width=500&height=800&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="800" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQlGONh6Ew2T-p3Piv8gvw978eEOK_85XwTqIWCNLrmOdZcfilCMe5pDQwjuNUxuLUj0Ru_nadUWdz7/embed?start=false&loop=true&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </body>
 </html>
