--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Save Cheat Lake</title>
+<meta name="description" content="We are a volunteer group advocating for Cheat Lake, WV. Canada has purchased Cheat Lake and plans to sell public park land. We must stop them.">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
