--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
 <h1>Save Cheat Lake!</h1>
-<div><a href="https://cheatlake.us/files/2023-09-25_FERC%20Public%20Meeting%20Cheat%20Lake%20Transcript%206PM.pdf">Transcript from heated 9/25/2023 6PM Public Meeting</a> <a href="https://cheatlake.us/files/2023-09-25_FERC%20Public%20Meeting%20Cheat%20Lake%20Transcript%202PM.pdf">(Also 2PM)</a>
-</div>
+<br>
+  <a href="https://cheatlake.us/files/2023-09-25_FERC%20Public%20Meeting%20Cheat%20Lake%20Transcript%206PM.pdf">Transcript from heated 9/25/2023 6PM Public Meeting</a> <a href="https://cheatlake.us/files/2023-09-25_FERC%20Public%20Meeting%20Cheat%20Lake%20Transcript%202PM.pdf">(Also 2PM)</a>
+  <br>
 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fsavecheatlake&tabs=timeline%2C%20events%2C%20messages&width=500&height=800&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="800" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQlGONh6Ew2T-p3Piv8gvw978eEOK_85XwTqIWCNLrmOdZcfilCMe5pDQwjuNUxuLUj0Ru_nadUWdz7/embed?start=false&loop=true&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </body>
